# libovlnet

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  application.cc  application.cpp  application.h  application.hh  bootstrapnodelist.cpp  bootstrapnodelist.h  buddylist.cpp  buddylist.h  buddylist.hh  buddylistview.cpp  buddylistview.h  callwindow.cc  callwindow.cpp  callwindow.h  callwindow.hh  chatwindow.cc  chatwindow.cpp  chatwindow.h  chatwindow.hh  dhtnetgraph.cc  dhtnetgraph.cpp  dhtnetgraph.h  dhtnetgraph.hh  dhtstatus.cc  dhtstatus.cpp  dhtstatus.h  dhtstatus.hh  dhtstatusview.cc  dhtstatusview.cpp  dhtstatusview.h  filetransfer.cpp  filetransfer.h  filetransferdialog.cc  filetransferdialog.cpp  filetransferdialog.h  filetransferdialog.hh  fileupload.cpp  fileupload.h  logwindow.cpp  (+29 more)
cmake/: Findovlnet.cmake
daemon/: CMakeLists.txt  application.cc  application.cpp  application.h  application.hh  echostream.cc  echostream.cpp  echostream.h  echostream.hh  halchat.cc  halchat.cpp  halchat.h  halchat.hh  httpstatus.cc  httpstatus.cpp  httpstatus.h  httpstatus.hh  main.cc  main.cpp  qhal.cpp  settings.cc  settings.cpp  settings.h  settings.hh  socksconnection.cpp  socksconnection.h  sockswhitelist.cpp  sockswhitelist.hh
doc/: Doxyfile
hardware/: feritte.lbr  rx.sch
lib/: CMakeLists.txt  buckets.cc  buckets.cpp  buckets.h  buckets.hh  crypto.cc  crypto.cpp  crypto.h  crypto.hh  dht.cc  dht.cpp  dht.h  dht.hh  dht_config.h  dht_config.hh  filetransfer.cc  filetransfer.cpp  filetransfer.h  filetransfer.hh  httpproxy.cc  httpproxy.cpp  httpproxy.hh  httpservice.cc  httpservice.cpp  httpservice.h  httpservice.hh  identity.cpp  identity.h  logger.cc  logger.cpp  logger.h  natpmp.cc  natpmp.cpp  natpmp.h  node.cc  node.hh  ntp.cc  ntp.cpp  ntp.h  ovlnet.h  (+31 more)
shared/: resources.qrc  vlfclient.desktop  vlfdaemon.conf
src/: CMakeLists.txt  application.cpp  application.h  buckets.cc  buckets.hh  crypto.cc  crypto.hh  dht.cc  dht.cpp  dht.h  dht.hh  dht_config.hh  filetransfer.cc  filetransfer.hh  http.cc  http.hh  httpclient.cc  httpclient.hh  httpproxy.cc  httpproxy.hh  httpservice.cc  httpservice.hh  logger.cc  mailservice.cc  mailservice.hh  main.cpp  natpmp.hh  network.cc  network.hh  node.cc  node.hh  ntp.cc  ntp.hh  optionparser.cc  optionparser.hh  ovlnet.hh  pcp.cc  plugin.cc  plugin.hh  securecall.cc  (+11 more)
src/chord/: chord.cpp  chord.h  transport.cpp  transport.h
src/qntp/: NtpClient.cpp  NtpClient.h  NtpReply.cpp
test/: CMakeLists.txt  application.cc  application.hh  main.cpp
tools/: CMakeLists.txt  httpproxy.cc  httpproxy.cpp  httpsrv.cc  ovlupnp.cc
