SET(OVL_HTTPPROXY_SOURCES httpproxy.cpp )
SET(OVL_HTTPPROXY_MOC_HEADERS )
SET(OVL_HTTPPROXY_HEADERS ${OVL_PROXY_MOC_HEADERS} )

qt5_wrap_cpp(OVL_HTTPPROXY_MOC_SOURCES ${OVL_HTTPPROXY_MOC_HEADERS})

add_executable(ovlhttpproxy ${OVL_HTTPPROXY_SOURCES} ${OVL_HTTPPROXY_MOC_SOURCES} ${OVL_HTTPPROXY_RCC_SOURCES})
target_link_libraries(ovlhttpproxy ovlnet ${LIBS})

INSTALL(TARGETS ovlhttpproxy DESTINATION bin)

