SET(OVL_HTTPPROXY_SOURCES httpproxy.cc )
SET(OVL_HTTPPROXY_MOC_HEADERS )
SET(OVL_HTTPPROXY_HEADERS ${OVL_HTTPPROXY_MOC_HEADERS} )

qt5_wrap_cpp(OVL_HTTPPROXY_MOC_SOURCES ${OVL_HTTPPROXY_MOC_HEADERS})

add_executable(ovlhttpproxy ${OVL_HTTPPROXY_SOURCES} ${OVL_HTTPPROXY_MOC_SOURCES} ${OVL_HTTPPROXY_RCC_SOURCES})
target_link_libraries(ovlhttpproxy ovlnet ${LIBS})

SET(OVL_HTTPSRV_SOURCES httpsrv.cc)
SET(OVL_HTTPSRV_MOC_HEADERS )
SET(OVL_HTTPSRV_HEADERS ${OVL_HTTPSRV_MOC_HEADERS} )

qt5_wrap_cpp(OVL_HTTPSRV_MOC_SOURCES ${OVL_HTTPSRV_MOC_HEADERS})

add_executable(ovlhttpsrv ${OVL_HTTPSRV_SOURCES} ${OVL_HTTPSRV_MOC_SOURCES} ${OVL_HTTPSRV_RCC_SOURCES})
target_link_libraries(ovlhttpsrv ovlnet ${LIBS})

INSTALL(TARGETS ovlhttpsrv DESTINATION bin)


SET(OVL_UPNP_SOURCES ovlupnp.cc)
SET(OVL_UPNP_MOC_HEADERS )
SET(OVL_UPNP_HEADERS ${OVL_UPNP_MOC_HEADERS} )

qt5_wrap_cpp(OVL_UPNP_MOC_SOURCES ${OVL_UPNP_MOC_HEADERS})

add_executable(ovlupnp ${OVL_UPNP_SOURCES} ${OVL_UPNP_MOC_SOURCES} ${OVL_UPNP_RCC_SOURCES})
target_link_libraries(ovlupnp ovlnet ${LIBS})

INSTALL(TARGETS ovlupnp DESTINATION bin)
